openshift/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: image-registry.openshift-image-registry.svc:5000/default/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
