openshift/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: image-registry.openshift-image-registry.svc:5000/default/nginx:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
